RESOLVED FIXED295962
[GTK] inconsistent font selection, mixing serif and san-serif fonts
https://bugs.webkit.org/show_bug.cgi?id=295962
Summary [GTK] inconsistent font selection, mixing serif and san-serif fonts
Fujii Hironori
Reported 2025-07-14 23:17:29 PDT
Created attachment 476012 [details] screenshot I'm using the latest Epiphany TP (2025-07-14) and Fedora 42. It has a problem of inconsistent font selection, mixing serif and san-serif fonts at <https://www.sankei.com/>.
Attachments
screenshot (55.31 KB, image/png)
2025-07-14 23:17 PDT, Fujii Hironori
no flags
reduced content (824 bytes, text/html)
2025-07-14 23:17 PDT, Fujii Hironori
no flags
screenshot of www.goo.ne.jp (85.58 KB, image/png)
2025-07-14 23:22 PDT, Fujii Hironori
no flags
reduced content (266 bytes, text/html)
2025-10-08 06:48 PDT, Fujii Hironori
no flags
reduced content 2 (319 bytes, text/html)
2026-01-31 01:13 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2025-07-14 23:17:51 PDT
Created attachment 476013 [details] reduced content
Fujii Hironori
Comment 2 2025-07-14 23:22:21 PDT
Created attachment 476014 [details] screenshot of www.goo.ne.jp https://www.goo.ne.jp/ also has this issue.
Fujii Hironori
Comment 3 2025-07-15 00:04:14 PDT
Comment on attachment 476013 [details] reduced content This reduced content is no longer reproducible for me even though I created this today and I didn't change any fonts settings on my system.
Fujii Hironori
Comment 4 2025-10-08 06:48:47 PDT
Created attachment 477028 [details] reduced content
Fujii Hironori
Comment 5 2025-10-08 06:51:36 PDT
This is still reproducible with Epiphany Canary (WebKitGTK 301039@main) on my Fedora Linux.
Fujii Hironori
Comment 6 2026-01-31 01:13:35 PST
Created attachment 478206 [details] reduced content 2
Fujii Hironori
Comment 7 2026-01-31 06:22:08 PST
SystemFallbackFontCache caches the system fallback font without checking weight. diff --git a/Source/WebCore/platform/graphics/SystemFallbackFontCache.cpp b/Source/WebCore/platform/graphics/SystemFallbackFontCache.cpp index cb417a199164..f93b8f24d0be 100644 --- a/Source/WebCore/platform/graphics/SystemFallbackFontCache.cpp +++ b/Source/WebCore/platform/graphics/SystemFallbackFontCache.cpp @@ -55,6 +55,7 @@ SystemFallbackFontCache* SystemFallbackFontCache::forCurrentThreadIfExists() RefPtr<Font> SystemFallbackFontCache::systemFallbackFontForCharacterCluster(const Font* font, StringView characterCluster, const FontDescription& description, ResolvedEmojiPolicy resolvedEmojiPolicy, IsForPlatformFont isForPlatformFont) { + m_characterFallbackMaps.clear(); auto fontAddResult = m_characterFallbackMaps.add(font, CharacterFallbackMap()); auto key = CharacterFallbackMapKey { description.computedLocale(), characterCluster.toString(), isForPlatformFont != IsForPlatformFont::No, resolvedEmojiPolicy };
Fujii Hironori
Comment 8 2026-01-31 06:47:34 PST
Fujii Hironori
Comment 9 2026-01-31 17:07:15 PST
EWS
Comment 10 2026-02-14 01:49:40 PST
Committed 307565@main (ce075d61e972): <https://commits.webkit.org/307565@main> Reviewed commits have been landed. Closing PR #57646 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.