[Skia] System fallback font selection shouldn't take style into account https://bugs.webkit.org/show_bug.cgi?id=295962

Reviewed by Carlos Garcia Campos.

WebKit has WebCore::SystemFallbackFontCache class which caches system fallback
fonts. The cache key is a tuple of a string, locale and emoji policy. But, the
weight, width and slant are't involved into the cache key. However, Skia
backend looked for a system fallback font with the font style. This resulted in
mixed fonts for a text.

* LayoutTests/platform/glib/fast/forms/visual-hebrew-text-field-expected.txt:
* LayoutTests/platform/glib/fast/text/in-rendered-text-rtl-expected.txt:
* LayoutTests/platform/glib/fast/text/international/bidi-LDB-2-CSS-expected.txt:
* LayoutTests/platform/glib/fast/text/international/bidi-LDB-2-HTML-expected.txt:
* LayoutTests/platform/glib/fast/text/international/bidi-LDB-2-formatting-characters-expected.txt:
* LayoutTests/platform/glib/fast/text/international/bidi-european-terminators-expected.txt:
* LayoutTests/platform/glib/fast/text/international/bidi-ignored-for-first-child-inline-expected.txt:
* LayoutTests/platform/glib/fast/text/international/rtl-caret-expected.txt:
* LayoutTests/platform/glib/fast/text/midword-break-after-breakable-char-expected.txt:
* LayoutTests/platform/gtk/fast/forms/select-writing-direction-natural-expected.txt:
* LayoutTests/platform/wpe/fast/forms/select-writing-direction-natural-expected.txt:
* Source/WebCore/platform/graphics/skia/FontCacheSkia.cpp:
(WebCore::FontCache::systemFallbackForCharacterCluster):
* Source/WebCore/platform/graphics/skia/SkiaSystemFallbackFontCache.cpp:
(WebCore::FontSetCache::FontSetCache):
(WebCore::FontSetCache::create):
(WebCore::FontSetCache::fontForCharacterCluster):
(WebCore::FontSetCache::FontSet::create):
(WebCore::SkiaSystemFallbackFontCache::fontForCharacterCluster):
(WebCore::fontconfigStyle):
(WebCore::FontSetCacheKey::FontSetCacheKey): Deleted.
(WebCore::FontSetCacheKey::isHashTableDeletedValue const): Deleted.
(WebCore::add): Deleted.
(WebCore::FontSetCacheKeyHash::hash): Deleted.
(WebCore::FontSetCacheKeyHash::equal): Deleted.
* Source/WebCore/platform/graphics/skia/SkiaSystemFallbackFontCache.h:

Canonical link: https://commits.webkit.org/307565@main